Issue #20041: Fixed TypeError when frame.f_trace is set to None. Patch by Xavier de Gaye.